General restructure add simple gui